ChangeLog about Mulk: open source non-interactive multi-connection network
downloader with image filtering and Metalink support (version 0.6.0)


2012/04/30 Emanuele <pocoyo@users.sourceforge.net>
	* a couple of functions have been converted to macros, i.e. is_printf and string_free
	* urls without protocol are supposed to be HTTP

2012/02/02 Emanuele <pocoyo@users.sourceforge.net>
	* new option to execute an external program to filter URLs to download

2012/01/30 Emanuele <pocoyo@users.sourceforge.net>
	* fix small problem, changes in libmulk didn't cause a mulk recompilation and shared library was compiled with a wrong define

2012/01/13 Emanuele <pocoyo@users.sourceforge.net>
	* new options to print full lists of valid countries and continents for Metalink files

2012/01/12 Emanuele <pocoyo@users.sourceforge.net>
	* Copyright updated for new year 2012

2011/08/24 Emanuele <pocoyo@users.sourceforge.net>
	* fix to have correct parameters printed out when resuming metalink file download
	* fix to avoid compiling MD2 checksum when not present in openssl library
	* enable warnings as error on compilation when debug flag is true
	* fix to compile on 64bit machine

2011/07/10 Emanuele <pocoyo@users.sourceforge.net>
	* bug fixed, correct behaviour in accepted domains if the the host is represented as an IP

2011/07/07 Emanuele <pocoyo@users.sourceforge.net>
	* don't verify peer and host when connecting over SSL
	* a new check on metalink files has been added. If the chunk length doesn't match, generate an error

2011/07/03 Emanuele <pocoyo@users.sourceforge.net>
	* large file support has been added

2011/07/01 Emanuele <pocoyo@users.sourceforge.net>
	* bug fixed, http://www.example.com and http://www.example.com/ have to be considered the same url

2011/06/28 Emanuele <pocoyo@users.sourceforge.net>
	* bug fixed, whole checksum of a file sometimes was miscomputed due to unsynchronised file

2011/06/26 Emanuele <pocoyo@users.sourceforge.net>